--- a/reset-horizon-client.workflow/Contents/Info.plist
+++ b/reset-horizon-client.workflow/Contents/Info.plist
@@ -12,7 +12,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Reset VPN Setup</string>
+				<string>reset-horizon-client</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
